@@ -41,12 +41,12 @@ class JavaElementFactoryTest implements RewriteTest {
         spec.parser(JavaParser.fromJavaVersion().typeCache(typeCache));
     }
 
-    @Test
     @SuppressWarnings("OptionalGetWithoutIsPresent")
+    @Test
     void instanceMethodReference() {
         RecipeSpec spec = RecipeSpec.defaults();
         defaults(spec);
-        SourceFile sourceFile = spec.getParsers().get(0).build().parse(
+        SourceFile sourceFile = spec.getParsers().getFirst().build().parse(
           //language=java
           """
             package foo;
@@ -80,12 +80,12 @@ class JavaElementFactoryTest implements RewriteTest {
         assertThat(SemanticallyEqual.areEqual(reference, methodReference)).isTrue();
     }
 
-    @Test
     @SuppressWarnings("OptionalGetWithoutIsPresent")
+    @Test
     void staticMethodReference() {
         RecipeSpec spec = RecipeSpec.defaults();
         defaults(spec);
-        SourceFile sourceFile = spec.getParsers().get(0).build().parse(
+        SourceFile sourceFile = spec.getParsers().getFirst().build().parse(
           //language=java
           """
             package foo;
@@ -119,12 +119,12 @@ class JavaElementFactoryTest implements RewriteTest {
         assertThat(SemanticallyEqual.areEqual(reference, methodReference)).isTrue();
     }
 
-    @Test
     @SuppressWarnings("OptionalGetWithoutIsPresent")
+    @Test
     void qualifiedStaticMethodReference() {
         RecipeSpec spec = RecipeSpec.defaults();
         defaults(spec);
-        SourceFile sourceFile = spec.getParsers().get(0).build().parse(
+        SourceFile sourceFile = spec.getParsers().getFirst().build().parse(
           //language=java
           """
             package foo;
